--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "Aiden Bai",
   "license": "MIT",
   "scripts": {
-    "start": "node server.mjs"
+    "start": "nodemon server.mjs"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
   }
 }
